@@ -1,9 +1,14 @@
+2019-07-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/setup.R: A few more #nocov tags
+
 2019-07-18  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
 
-	* R/pushes.R: Renamed to pbGetPosts
-	* man/pbGetPosts.Rd: Idem
+	* R/init.R: Added #nocov tags
+	* R/pushes.R: Renamed to pbGetPosts, added #nocov tags
+	* man/pbGetPosts.Rd: Renamed
 
 2019-07-17  Chanyub Park  <mrchypark@gmail.com>
 
